--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 /* variaveis */
 :root {
   --font1: "Poppins", serif;
-
   --bg-sec-text: #ffe0bd;
 }
 
@@ -126,7 +125,7 @@ section.sec-texto img#dev {
   display: block;
 }
 /* section com imagem */
-section.parallax-1 {
+section.parallax-2 {
   background: url(https://images.unsplash.com/photo-1508739773434-c26b3d09e071?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
     no-repeat center center/cover fixed;
   box-shadow: inset 1px 1px 20px rgba(0, 0, 0, 0.474);
@@ -140,17 +139,15 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 footer p {
   color: #fff;
 }
-footer p a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 900;
-}
-footer p a:hover {
-  text-decoration: underline;
+/* icones de redes */
+footer div.redes img {
+  margin: 0 auto;
+  width: 2em;
 }
 
 /* responsivo */
