Adiciona fonte externa

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@font-face {
+  font-family: "fontPaul";
+  src: url(./font/Paul\ Jackson_personal\ use.ttf);
+}
 /* variaveis */
 :root {
   --font1: "Poppins", serif;
@@ -27,7 +30,7 @@ header {
 
   width: 100%;
 
-  padding: 2em;
+  padding: 0.5em;
   background: #000;
   color: #fff;
 
@@ -35,7 +38,8 @@ header {
   z-index: 11;
 }
 header h1 {
-  font-size: 1.5em;
+  font-family: "fontPaul";
+  font-size: 2em;
   margin-left: 2em;
 }
 header h1 a {
