--- a/style.css
+++ b/style.css
@@ -135,10 +135,36 @@ section.sec-texto img#dev {
 }
 /* section com imagem */
 section.parallax-2 {
-  background: url(https://images.unsplash.com/photo-1508739773434-c26b3d09e071?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
-    no-repeat center center/cover fixed;
+  /* background: url(https://images.unsplash.com/photo-1508739773434-c26b3d09e071?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+    no-repeat center center/cover fixed; */
   box-shadow: inset 1px 1px 20px rgba(0, 0, 0, 0.474);
+  background: orange;
 }
+section#projetos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+}
+section#projetos div.grade-projetos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1em;
+  max-width: 600px;
+}
+section#projetos div.grade-projetos div.projeto {
+  text-align: center;
+  width: 40%;
+  background-color: #000;
+  color: var(--bg-sec-text);
+  padding: 0.5em;
+  border-radius: 8px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.792);
+}
+
 /* footer */
 footer {
   width: 100%;
