--- a/style.css
+++ b/style.css
@@ -172,6 +172,22 @@ section#projetos div.grade-projetos div.projeto a:hover {
   text-decoration: underline;
 }
 
+/* section tec */
+section.sec-texto-2 {
+  background: rgb(50, 58, 205);
+}
+section.sec-texto-2 .grade-tecnologias {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-wrap: wrap;
+}
+section.sec-texto-2 img {
+  border: 1px solid;
+  width: 35%;
+}
 /* footer */
 footer {
   width: 100%;
